# NOTE:
# 1. for display continuity sake please use 2 spaces instead of tabs
# 2. make sure that lines break at 80 chars for constricted display situations
#<-------------------------------- 80 chars ---------------------------------->#

2016-11-15 mmichaud <m.michael.michaud@orange.fr>
  * Fix #353 Dialogs do not use preferred size on dual screen

2016-11-14 mmichaud <m.michael.michaud@orange.fr>
  * deactivate the misleading disjoint predicate in query and join plugins
  * #FR 249 - add "intersects interior point" and "interior point intersects"
    in query and join predicates

2016-11-12 mmichaud <m.michael.michaud@orange.fr>
  * Fix #442 Missing unsaved layers warning in SaveProjectPlugIn
  * Fix #441 Missing file overwrite warning in SaveLayersWithoutDataSourcePlugIn

2016-11-11 mmichaud <m.michael.michaud@orange.fr>
  * Add 3 functions in GeometryFunction plugin
    - Simplifier (Remove small segments)
    - Remove Holes (FR #248)
    - Remove Small Holes

2016-11-08 Giuseppe Aruta
  * Sextante: activated Sextante help for single algorithms
  * Sextante: Sextante tables are decoded from OJ vector files
    with all features with empy geometries
  
2016-11-06 mmichaud <m.michael.michaud@orange.fr>
  * Fix bug #439 MakeValid now uses SymDifference instead of difference to
    repair overlapping holes (which corresponds what is displayed on screen)
  * Add a selection mode to select features with a Multi-Geometry type

2016-11-05 mmichaud <m.michael.michaud@orange.fr>
  * Writable PostGIS driver apply a ST_Multi transformation to geometries
    if it detected that the distant table has a MultiGeometry constraint
  * Add two geometry functions to wrap/unwrap geom into/from multigeometry

2016-11-04 mmichaud <m.michael.michaud@orange.fr>
  * Add two plugins to generate random values in an attribute

2016-11-01 mmichaud <m.michael.michaud@orange.fr>
  * Fix #438 Exception while saving the project before closing application

2016-10-31 Giuseppe Aruta